Update Settings And Math

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "future": "cpp",
         "system_error": "cpp",
         "regex": "cpp",
-        "usererror": "c"
+        "usererror": "c",
+        "ratio": "cpp"
     }
 }
